--- a/package.json
+++ b/package.json
@@ -55,7 +55,13 @@
     "jest": "29.5.0",
     "postcss": "^8.4.31",
     "postcss-syntax": "^0.36.2",
+    "prettier": "^2.8.8",
     "source-map-support": "^0.5.20",
+    "stylelint": "^15.10.3",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-plugin-stylus": "^0.18.0",
+    "stylelint-prettier": "^4.0.2",
     "supertest": "^6.1.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "29.1.0",
