--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,20 +1,15 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
+    "module": "ES6",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "lib": [
-      "ESNext"
+      "ESNext",
+      "DOM",
+      "DOM.Iterable"
     ],
-    "paths": {
-      "$/*": ["node_modules/*"]
-    },
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
+    "target": "ESNext",
     "baseUrl": "./",
     "moduleResolution": "Node",
     "incremental": true,
