--- a/package.json
+++ b/package.json
@@ -24,23 +24,34 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "gulp": "^4.0.2",
+    "jquery": "1.11.0",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swiper": "4.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/plugin-transform-runtime": "^7.22.15",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.23.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/gulp": "^4.0.14",
+    "@types/gulp-babel": "^6.1.31",
+    "@types/gulp-if": "^3.0.2",
     "@types/gulp-postcss": "^8.0.4",
     "@types/gulp-replace": "^1.1.0",
     "@types/gulp-sourcemaps": "^0.0.36",
     "@types/gulp-stylus": "^2.7.6",
+    "@types/gulp-uglify": "^3.0.9",
     "@types/jest": "29.5.1",
+    "@types/jquery": "3.5.5",
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
+    "@types/swiper": "5.4.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^10.4.16",
@@ -48,10 +59,13 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-if": "^3.0.0",
     "gulp-postcss": "^9.0.1",
     "gulp-replace": "^1.1.4",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-stylus": "^3.0.1",
+    "gulp-uglify": "^3.0.2",
     "jest": "29.5.0",
     "postcss": "^8.4.31",
     "postcss-syntax": "^0.36.2",
