--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@sunday9787/log": "^1.0.2",
     "gulp": "^4.0.2",
     "jquery": "1.11.0",
     "pug": "^3.0.2",
