--- a/package.json
+++ b/package.json
@@ -2,104 +2,33 @@
   "name": "qianli",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "机车靓仔",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
-  },
-  "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@sunday9787/log": "^1.0.2",
-    "gulp": "^4.0.2",
-    "jquery": "1.11.0",
-    "pug": "^3.0.2",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "swiper": "4.5.0"
+    "start:dev": "pnpm -r start:dev",
+    "build:webpack": "pnpm -r build:webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/plugin-transform-runtime": "^7.22.15",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/preset-typescript": "^7.23.0",
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/gulp": "^4.0.14",
-    "@types/gulp-babel": "^6.1.31",
-    "@types/gulp-if": "^3.0.2",
-    "@types/gulp-postcss": "^8.0.4",
-    "@types/gulp-replace": "^1.1.0",
-    "@types/gulp-sourcemaps": "^0.0.36",
-    "@types/gulp-stylus": "^2.7.6",
-    "@types/gulp-uglify": "^3.0.9",
-    "@types/jest": "29.5.1",
-    "@types/jquery": "3.5.5",
-    "@types/node": "18.16.12",
-    "@types/supertest": "^2.0.11",
-    "@types/swiper": "5.4.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "autoprefixer": "^10.4.16",
-    "cssnano": "^6.0.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-if": "^3.0.0",
-    "gulp-postcss": "^9.0.1",
-    "gulp-replace": "^1.1.4",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-stylus": "^3.0.1",
-    "gulp-uglify": "^3.0.2",
     "jest": "29.5.0",
-    "postcss": "^8.4.31",
-    "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.8",
-    "source-map-support": "^0.5.20",
     "stylelint": "^15.10.3",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-plugin-stylus": "^0.18.0",
     "stylelint-prettier": "^4.0.2",
     "supertest": "^6.1.3",
-    "tailwindcss": "^3.3.3",
     "ts-jest": "29.1.0",
-    "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.2.0",
     "typescript": "^5.0.0"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+  "workspaces": {
+    "packages": ["packages/*"]
+  },
+  "packageManager": "pnpm@8.0.0"
 }
