--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -43,6 +43,7 @@
     "@types/swiper": "5.4.3",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
+    "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
