--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.33.0",
     "gulp": "^4.0.2",
     "jquery": "1.11.0",
+    "lax.js": "^2.0.3",
     "requirejs": "^2.3.6",
     "swiper": "4.5.0"
   },
