--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start:dev": "pnpm -r start:dev",
-    "build:webpack": "pnpm -r build:webpack"
+    "start:dev": "pnpm -r start:dev"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
