--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -5,12 +5,15 @@
   "keywords": [],
   "author": "",
   "scripts": {
-    "build:rollup": "rollup -c rollup.config.mjs",
-    "build:webpack": "webpack --config webpack.config.js"
+    "build:pro": "webpack --config ./build/webpack.config.js --env NODE_ENV=production APP_ENV=pro",
+    "build:dev": "webpack --config ./build/webpack.config.js --env NODE_ENV=production APP_ENV=dev",
+    "build:test": "webpack --config ./build/webpack.config.js --env NODE_ENV=production APP_ENV=test",
+    "start:dev": "webpack --config ./build/webpack.config.js --env NODE_ENV=development APP_ENV=dev"
   },
   "dependencies": {
     "@sunday9787/log": "^1.0.2",
     "core-js": "^3.33.0",
+    "dayjs": "^1.11.10",
     "gulp": "^4.0.2",
     "jquery": "1.11.0",
     "lax.js": "^2.0.3",
@@ -25,19 +28,6 @@
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-typescript": "^7.23.0",
     "@babel/runtime-corejs3": "^7.23.2",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.5",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@types/gulp": "^4.0.14",
-    "@types/gulp-babel": "^6.1.31",
-    "@types/gulp-if": "^3.0.2",
-    "@types/gulp-postcss": "^8.0.4",
-    "@types/gulp-rev": "^5.0.34",
-    "@types/gulp-sourcemaps": "^0.0.36",
-    "@types/gulp-stylus": "^2.7.6",
-    "@types/gulp-uglify": "^3.0.9",
     "@types/jquery": "3.5.5",
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
@@ -49,20 +39,10 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.1",
-    "gulp-babel": "^8.0.0",
-    "gulp-if": "^3.0.0",
-    "gulp-postcss": "^9.0.1",
-    "gulp-replace": "^1.1.4",
-    "gulp-rev": "^9.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-stylus": "^3.0.1",
-    "gulp-uglify": "^3.0.2",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
     "postcss-syntax": "^0.36.2",
-    "rollup": "^4.0.2",
-    "rollup-plugin-output-manifest": "^2.0.0",
     "stylus": "^0.60.0",
     "stylus-loader": "^7.1.3",
     "tailwindcss": "^3.3.3",
@@ -70,7 +50,8 @@
     "ts-loader": "^9.2.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-manifest-plugin": "^5.0.0"
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-merge": "^5.10.0"
   },
   "license": "ISC"
 }
