--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "typescript": "^5.0.0"
   },
   "workspaces": {
-    "packages": ["services/*"]
+    "packages": [
+      "services/*"
+    ]
   },
-  "packageManager": "pnpm@8.0.0"
+  "packageManager": "pnpm@8.0.0",
+  "dependencies": {
+    "dayjs": "^1.11.10"
+  }
 }
