--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -21,19 +21,24 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "js-yaml": "^4.1.0",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "29.5.1",
+    "@types/js-yaml": "^4.0.8",
+    "@types/pug": "^2.0.8",
     "source-map-support": "^0.5.20",
-    "tsconfig-paths": "4.2.0",
-    "@types/jest": "29.5.1"
+    "tsconfig-paths": "4.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
