--- a/services/backend/manifest.json
+++ b/services/backend/manifest.json
@@ -1,16 +1,26 @@
 {
-  "index.css": "/css/index.e366c081.css",
-  "index.js": "/js/index.b85bd746.js",
-  "layout.css": "/css/layout.41520a7d.css",
-  "layout.js": "/js/layout.18950752.js",
-  "common.css": "/css/common.a9d4489a.css",
-  "common.js": "/js/common.cd54ee84.js",
-  "base.css": "/css/base.1b109840.css",
-  "base.js": "/js/base.e7598c69.js",
-  "helper.js": "/js/helper.524a030f.js",
-  "log.js": "/js/log.98b46957.js",
-  "swiper.css": "/css/swiper.28251350.css",
-  "swiper.js": "/js/swiper.71befcc1.js",
+  "index.css": "/css/index.a5eac8c4.css",
+  "index.js": "/js/index.790cc174.js",
+  "layout.css": "/css/layout.9a6f40b9.css",
+  "layout.js": "/js/layout.d918eea3.js",
+  "common.css": "/css/common.0be12a7d.css",
+  "common.js": "/js/common.14875420.js",
+  "product.css": "/css/product.6cb702fa.css",
+  "product.js": "/js/product.bb66cc1b.js",
+  "about.css": "/css/about.7e6753f7.css",
+  "about.js": "/js/about.e14717b7.js",
+  "contact.css": "/css/contact.f7b5937e.css",
+  "contact.js": "/js/contact.18555883.js",
+  "news.css": "/css/news.54d2d87e.css",
+  "news.js": "/js/news.dac94e68.js",
+  "post.css": "/css/post.a5e68aa7.css",
+  "post.js": "/js/post.315fbeb2.js",
+  "base.css": "/css/base.5057ce64.css",
+  "base.js": "/js/base.00579548.js",
+  "helper.js": "/js/helper.eeeb5431.js",
+  "log.js": "/js/log.3a6eeeab.js",
+  "swiper.css": "/css/swiper.deda26e4.css",
+  "swiper.js": "/js/swiper.5f4a0cce.js",
   "lib/swiper.min.js": "/lib/swiper.min.js",
   "lib/jquery.min.js": "/lib/jquery.min.js",
   "lib/require.min.js": "/lib/require.min.js",
