--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -23,7 +23,9 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^10.0.0",
     "js-yaml": "^4.1.0",
+    "mysql2": "^3.6.2",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
