--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -24,6 +24,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
     "mysql2": "^3.6.2",
     "pug": "^3.0.2",
