--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "start:dev": "pnpm -r start:dev"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "cssnano": "^6.0.1",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "jest": "29.5.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "stylelint": "^15.10.3",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-plugin-stylus": "^0.18.0",
     "stylelint-prettier": "^4.0.2",
     "supertest": "^6.1.3",
+    "tailwindcss": "^3.3.5",
     "ts-jest": "29.1.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0"
