ci[admin]: 调整 环境变量 自动格式化 配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "css.validate": false,
+  "less.lint.unknownAtRules": "ignore",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true,
     "source.fixAll.stylelint": true
@@ -13,7 +14,8 @@
   ],
   "stylelint.customSyntax": "stylelint-plugin-stylus/custom-syntax",
   "stylelint.validate": [
-    "stylus"
+    "stylus",
+    "less"
   ],
   "stylelint.packageManager": "pnpm",
   "[stylus]": {
