--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -12,8 +12,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.5.0",
+    "axios": "^1.6.0",
     "naive-ui": "^2.35.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -29,7 +32,10 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint-plugin-vue": "^9.17.0",
     "eslint-plugin-vue-pug": "^0.6.0",
+    "less": "^4.2.0",
     "npm-run-all2": "^6.1.1",
+    "postcss-less": "^6.0.0",
+    "stylelint-less": "^2.0.0",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
     "vite-plugin-html": "^3.2.0",
