--- a/services/admin/tsconfig.app.json
+++ b/services/admin/tsconfig.app.json
@@ -5,7 +5,7 @@
     ]
   },
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["src/**/*.d.ts", "src/**/*", "src/**/*.vue"],
+  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.vue","./*.config.ts"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
