--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -31,17 +31,15 @@
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
     "@types/swiper": "5.4.3",
-    "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
-    "postcss-syntax": "^0.36.2",
-    "stylus": "^0.60.0",
+    "stylelint-plugin-stylus": "^0.18.0",
+    "stylus": "^0.61.0",
     "stylus-loader": "^7.1.3",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.2.3",
