--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -37,6 +37,8 @@
     "postcss-less": "^6.0.0",
     "stylelint-less": "^2.0.0",
     "typescript": "~5.2.0",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
     "vite-plugin-html": "^3.2.0",
     "vue-pug-plugin": "^2.0.3",
