--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -27,6 +27,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "md5": "^2.3.0",
     "mysql2": "^3.6.2",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +42,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/js-yaml": "^4.0.8",
+    "@types/jsonwebtoken": "^9.0.4",
+    "@types/md5": "^2.3.4",
     "@types/pug": "^2.0.8",
     "source-map-support": "^0.5.20",
     "tsconfig-paths": "4.2.0"
