--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.5.0",
     "axios": "^1.6.0",
     "naive-ui": "^2.35.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
@@ -24,6 +25,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.18.5",
+    "@types/nprogress": "^0.2.2",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@volar/vue-language-plugin-pug": "^1.6.5",
