--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vicons/material": "^0.12.0",
+    "@vicons/utils": "^0.1.4",
     "@vueuse/core": "^10.5.0",
     "axios": "^1.6.0",
     "naive-ui": "^2.35.0",
