--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -45,6 +45,7 @@
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
     "vite-plugin-html": "^3.2.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-pug-plugin": "^2.0.3",
     "vue-tsc": "^1.8.19"
   }
