--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -16,6 +16,8 @@
     "@vicons/utils": "^0.1.4",
     "@vueuse/core": "^10.5.0",
     "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21",
     "naive-ui": "^2.35.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/lodash-es": "^4.17.11",
     "@types/node": "^18.18.5",
     "@types/nprogress": "^0.2.2",
     "@vitejs/plugin-vue": "^4.4.0",
