--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.1.0",
+    "@ckeditor/ckeditor5-core": "^40.1.0",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@vicons/material": "^0.12.0",
     "@vicons/utils": "^0.1.4",
     "@vueuse/core": "^10.5.0",
