--- a/services/admin/tsconfig.app.json
+++ b/services/admin/tsconfig.app.json
@@ -11,6 +11,7 @@
   "lib": ["ES2020", "DOM", "DOM.Iterable"],
   "compilerOptions": {
     "composite": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
