chore: 调整图片路径为绝对路径

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
   cache:
     container_name: redis
     image: redis:alpine3.18
+    restart: always
     networks:
       - qianli
     ports:
