--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.1.0",
     "@ckeditor/ckeditor5-core": "^40.1.0",
+    "@ckeditor/ckeditor5-upload": "^40.1.0",
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@vicons/material": "^0.12.0",
     "@vicons/utils": "^0.1.4",
