--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -46,6 +46,7 @@
     "@types/js-yaml": "^4.0.8",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/md5": "^2.3.4",
+    "@types/multer": "^1.4.10",
     "@types/pug": "^2.0.8",
     "source-map-support": "^0.5.20",
     "tsconfig-paths": "4.2.0"
