--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.1",
     "naive-ui": "^2.35.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
