--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -19,12 +19,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "cache-manager": "^5.3.1",
+    "cache-manager-ioredis-yet": "^1.2.2",
     "class-validator": "^0.14.0",
     "ioredis": "^5.3.2",
     "js-yaml": "^4.1.0",
