--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -18,6 +18,7 @@
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@vicons/material": "^0.12.0",
     "@vicons/utils": "^0.1.4",
+    "@vueuse/components": "^10.6.1",
     "@vueuse/core": "^10.5.0",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
@@ -27,6 +28,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "reflect-metadata": "^0.1.13",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
