--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -29,6 +29,7 @@
     "cache-manager": "^5.3.1",
     "cache-manager-ioredis-yet": "^1.2.2",
     "class-validator": "^0.14.0",
+    "express-session": "^1.17.3",
     "ioredis": "^5.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -45,6 +46,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/cache-manager": "^4.0.5",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "29.5.1",
     "@types/js-yaml": "^4.0.8",
     "@types/jsonwebtoken": "^9.0.4",
