--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -38,6 +38,7 @@
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "svg-captcha": "^1.4.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
