feat: 【admin】 产品模块添加上传视频 解决保存图片重复问题 【backend】 上传模块添加大文件上传

--- a/services/admin/.eslintrc
+++ b/services/admin/.eslintrc
@@ -25,6 +25,7 @@
   },
   "rules": {
     "vue/multi-word-component-names": ["error", { "ignores": ["index"] }],
-    "@typescript-eslint/no-this-alias": ["error", { "allowedNames": ["self"] }]
+    "@typescript-eslint/no-this-alias": ["error", { "allowedNames": ["self"] }],
+    "@typescript-eslint/no-namespace": "off"
   }
 }
