--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -21,6 +21,7 @@
     "@vueuse/components": "^10.6.1",
     "@vueuse/core": "^10.5.0",
     "axios": "^1.6.0",
+    "js-md5": "^0.8.3",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "naive-ui": "^2.35.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/js-md5": "^0.7.2",
     "@types/lodash-es": "^4.17.11",
     "@types/node": "^18.18.5",
     "@types/nprogress": "^0.2.2",
