--- a/services/backend/manifest.json
+++ b/services/backend/manifest.json
@@ -1,26 +1,28 @@
 {
-  "index.css": "/css/index.a5eac8c4.css",
-  "index.js": "/js/index.790cc174.js",
-  "layout.css": "/css/layout.9a6f40b9.css",
-  "layout.js": "/js/layout.97f95c9d.js",
-  "common.css": "/css/common.0be12a7d.css",
-  "common.js": "/js/common.14875420.js",
-  "product.css": "/css/product.6cb702fa.css",
-  "product.js": "/js/product.bb66cc1b.js",
-  "about.css": "/css/about.7e6753f7.css",
-  "about.js": "/js/about.e14717b7.js",
-  "contact.css": "/css/contact.f7b5937e.css",
-  "contact.js": "/js/contact.18555883.js",
-  "news.css": "/css/news.54d2d87e.css",
-  "news.js": "/js/news.dac94e68.js",
-  "post.css": "/css/post.a5e68aa7.css",
-  "post.js": "/js/post.315fbeb2.js",
-  "base.css": "/css/base.5057ce64.css",
-  "base.js": "/js/base.00579548.js",
-  "helper.js": "/js/helper.eeeb5431.js",
-  "log.js": "/js/log.3a6eeeab.js",
-  "swiper.css": "/css/swiper.deda26e4.css",
-  "swiper.js": "/js/swiper.5f4a0cce.js",
+  "index.css": "/css/index.8c4096b4.min.css",
+  "index.js": "/js/index.b25b4865.js",
+  "layout.css": "/css/layout.020df102.min.css",
+  "layout.js": "/js/layout.36450b7e.js",
+  "common.css": "/css/common.def519c5.min.css",
+  "common.js": "/js/common.c335fe26.js",
+  "product.css": "/css/product.4623ae78.min.css",
+  "product.js": "/js/product.9d2ac1fa.js",
+  "product_detail.css": "/css/product_detail.89095643.min.css",
+  "product_detail.js": "/js/product_detail.5a47a27e.js",
+  "about.css": "/css/about.22cf8b2a.min.css",
+  "about.js": "/js/about.283be608.js",
+  "contact.css": "/css/contact.ceedcc55.min.css",
+  "contact.js": "/js/contact.c5fdc07e.js",
+  "news.css": "/css/news.4168ee9b.min.css",
+  "news.js": "/js/news.d8b0d745.js",
+  "post.css": "/css/post.f7a75f54.min.css",
+  "post.js": "/js/post.f99ba9ff.js",
+  "base.css": "/css/base.331b6128.min.css",
+  "base.js": "/js/base.e7598c69.js",
+  "helper.js": "/js/helper.2d013486.js",
+  "log.js": "/js/log.98b46957.js",
+  "swiper.css": "/css/swiper.c6d83988.min.css",
+  "swiper.js": "/js/swiper.71befcc1.js",
   "lib/swiper.min.js": "/lib/swiper.min.js",
   "lib/jquery.min.js": "/lib/jquery.min.js",
   "lib/require.min.js": "/lib/require.min.js",
