--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -10,7 +10,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node ./src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,13 +20,13 @@
   },
   "dependencies": {
     "@nestjs/cache-manager": "^2.1.1",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/typeorm": "^10.0.0",
-    "cache-manager": "^5.3.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/mapped-types": "^2.0.4",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/typeorm": "^10.0.1",
+    "cache-manager": "^5.3.2",
     "cache-manager-ioredis-yet": "^1.2.2",
     "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
@@ -34,27 +34,27 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
-    "mysql2": "^3.6.2",
+    "mysql2": "^3.6.5",
     "pug": "^3.0.2",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
+    "reflect-metadata": "^0.2.1",
+    "rxjs": "^7.8.1",
     "svg-captcha": "^1.4.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/cache-manager": "^4.0.5",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.3.0",
+    "@types/cache-manager": "^4.0.6",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
-    "@types/jest": "29.5.1",
-    "@types/js-yaml": "^4.0.8",
-    "@types/jsonwebtoken": "^9.0.4",
-    "@types/md5": "^2.3.4",
-    "@types/multer": "^1.4.10",
-    "@types/pug": "^2.0.8",
-    "source-map-support": "^0.5.20",
+    "@types/jest": "29.5.11",
+    "@types/js-yaml": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/md5": "^2.3.5",
+    "@types/multer": "^1.4.11",
+    "@types/pug": "^2.0.10",
+    "source-map-support": "^0.5.21",
     "tsconfig-paths": "4.2.0"
   },
   "jest": {
