--- a/services/admin/.env.production
+++ b/services/admin/.env.production
@@ -1,5 +1,5 @@
 # 基准API
-VITE_APP_BASE_API = 'http://localhost:3000/api'
+VITE_APP_BASE_API = 'http://qianli.com/api'
 
 # app 环境
 VITE_APP_ENV = 'production'
