--- a/services/backend/manifest.json
+++ b/services/backend/manifest.json
@@ -1,26 +1,28 @@
 {
-  "index.css": "/css/index.a5eac8c4.css",
-  "index.js": "/js/index.790cc174.js",
-  "layout.css": "/css/layout.9a6f40b9.css",
-  "layout.js": "/js/layout.97f95c9d.js",
-  "common.css": "/css/common.0be12a7d.css",
-  "common.js": "/js/common.14875420.js",
-  "product.css": "/css/product.6cb702fa.css",
-  "product.js": "/js/product.bb66cc1b.js",
-  "about.css": "/css/about.7e6753f7.css",
-  "about.js": "/js/about.e14717b7.js",
-  "contact.css": "/css/contact.f7b5937e.css",
-  "contact.js": "/js/contact.18555883.js",
-  "news.css": "/css/news.54d2d87e.css",
-  "news.js": "/js/news.dac94e68.js",
-  "post.css": "/css/post.a5e68aa7.css",
-  "post.js": "/js/post.315fbeb2.js",
-  "base.css": "/css/base.5057ce64.css",
-  "base.js": "/js/base.00579548.js",
-  "helper.js": "/js/helper.eeeb5431.js",
-  "log.js": "/js/log.3a6eeeab.js",
-  "swiper.css": "/css/swiper.deda26e4.css",
-  "swiper.js": "/js/swiper.5f4a0cce.js",
+  "index.css": "/css/index.4c89f49f.min.css",
+  "index.js": "/js/index.3576fc0d.js",
+  "layout.css": "/css/layout.020df102.min.css",
+  "layout.js": "/js/layout.3934ae39.js",
+  "common.css": "/css/common.def519c5.min.css",
+  "common.js": "/js/common.07bd8d04.js",
+  "product.css": "/css/product.4623ae78.min.css",
+  "product.js": "/js/product.ce5342f2.js",
+  "product_detail.css": "/css/product_detail.3d3c29b4.min.css",
+  "product_detail.js": "/js/product_detail.2f02c406.js",
+  "about.css": "/css/about.0738dde2.min.css",
+  "about.js": "/js/about.def40638.js",
+  "contact.css": "/css/contact.133561db.min.css",
+  "contact.js": "/js/contact.690532cd.js",
+  "news.css": "/css/news.94d73f51.min.css",
+  "news.js": "/js/news.d8b0d745.js",
+  "post.css": "/css/post.f7a75f54.min.css",
+  "post.js": "/js/post.f99ba9ff.js",
+  "base.css": "/css/base.a68f1448.min.css",
+  "base.js": "/js/base.e7598c69.js",
+  "helper.js": "/js/helper.91829487.js",
+  "log.js": "/js/log.29955a10.js",
+  "swiper.css": "/css/swiper.c6d83988.min.css",
+  "swiper.js": "/js/swiper.7adba9ba.js",
   "lib/swiper.min.js": "/lib/swiper.min.js",
   "lib/jquery.min.js": "/lib/jquery.min.js",
   "lib/require.min.js": "/lib/require.min.js",
