--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
-REDIS_HOST = cache
+REDIS_HOST = localhost
 REDIS_PORT = 6379
 REDIS_DB = 0
 
-DATA_BASE_HOST = db
+DATA_BASE_HOST = localhost
 DATA_BASE_PORT = 3306
 DATA_BASE_USERNAME = qianli
 DATA_BASE_PASSWORD = 123123
