build: 优化调整打包配置

--- a/services/admin/.env.development
+++ b/services/admin/.env.development
@@ -1,5 +1,6 @@
 # 基准API
-VITE_APP_BASE_API = 'http://localhost:3000/api'
+VITE_APP_BASE_API = 'http://localhost:3000'
 
+VITE_APP_RESOURCE_DOMAIN = 'http://localhost:5712'
 # app 环境
 VITE_APP_ENV = 'development'
