--- a/services/admin/.env.production
+++ b/services/admin/.env.production
@@ -1,5 +1,6 @@
 # 基准API
-VITE_APP_BASE_API = 'http://localhost:3000/api'
+VITE_APP_BASE_API = 'http://dev.qianli.com'
 
+VITE_APP_RESOURCE_DOMAIN = 'http://dev.resource.qianli.com'
 # app 环境
 VITE_APP_ENV = 'production'
