--- a/services/backend/manifest.json
+++ b/services/backend/manifest.json
@@ -1,28 +1,30 @@
 {
-  "index.css": "/css/index.a5eac8c4.css",
-  "index.js": "/js/index.790cc174.js",
-  "layout.css": "/css/layout.9a6f40b9.css",
-  "layout.js": "/js/layout.97f95c9d.js",
-  "common.css": "/css/common.0be12a7d.css",
-  "common.js": "/js/common.14875420.js",
-  "product.css": "/css/product.6cb702fa.css",
-  "product.js": "/js/product.bb66cc1b.js",
-  "about.css": "/css/about.7e6753f7.css",
-  "about.js": "/js/about.e14717b7.js",
-  "contact.css": "/css/contact.f7b5937e.css",
-  "contact.js": "/js/contact.18555883.js",
-  "news.css": "/css/news.54d2d87e.css",
-  "news.js": "/js/news.dac94e68.js",
-  "post.css": "/css/post.a5e68aa7.css",
-  "post.js": "/js/post.315fbeb2.js",
-  "base.css": "/css/base.5057ce64.css",
-  "base.js": "/js/base.00579548.js",
-  "helper.js": "/js/helper.eeeb5431.js",
-  "log.js": "/js/log.3a6eeeab.js",
-  "swiper.css": "/css/swiper.deda26e4.css",
-  "swiper.js": "/js/swiper.5f4a0cce.js",
-  "lib/swiper.min.js": "/lib/swiper.min.js",
-  "lib/jquery.min.js": "/lib/jquery.min.js",
-  "lib/require.min.js": "/lib/require.min.js",
-  "lib/log.min.js": "/lib/log.min.js"
+  "index.css": "http://dev.resource.qianli.com/css/index.a6a4e967.min.css",
+  "index.js": "http://dev.resource.qianli.com/js/index.a21c935d.min.js",
+  "layout.css": "http://dev.resource.qianli.com/css/layout.9d34b98e.min.css",
+  "layout.js": "http://dev.resource.qianli.com/js/layout.5b4a8467.min.js",
+  "common.css": "http://dev.resource.qianli.com/css/common.172cbed0.min.css",
+  "common.js": "http://dev.resource.qianli.com/js/common.1fd6710e.min.js",
+  "product.css": "http://dev.resource.qianli.com/css/product.ed77dd6f.min.css",
+  "product.js": "http://dev.resource.qianli.com/js/product.b83efa2b.min.js",
+  "product_detail.css": "http://dev.resource.qianli.com/css/product_detail.df40a8b6.min.css",
+  "product_detail.js": "http://dev.resource.qianli.com/js/product_detail.47845386.min.js",
+  "about.css": "http://dev.resource.qianli.com/css/about.dd6d12d2.min.css",
+  "about.js": "http://dev.resource.qianli.com/js/about.02930955.min.js",
+  "contact.css": "http://dev.resource.qianli.com/css/contact.6a08ff2d.min.css",
+  "contact.js": "http://dev.resource.qianli.com/js/contact.e67e7487.min.js",
+  "news.css": "http://dev.resource.qianli.com/css/news.dbff1fdc.min.css",
+  "news.js": "http://dev.resource.qianli.com/js/news.b49f113f.min.js",
+  "post.css": "http://dev.resource.qianli.com/css/post.36937efd.min.css",
+  "post.js": "http://dev.resource.qianli.com/js/post.b49f113f.min.js",
+  "base.css": "http://dev.resource.qianli.com/css/base.5c37240f.min.css",
+  "base.js": "http://dev.resource.qianli.com/js/base.b49f113f.min.js",
+  "helper.js": "http://dev.resource.qianli.com/js/helper.4b315320.min.js",
+  "log.js": "http://dev.resource.qianli.com/js/log.79292d1e.min.js",
+  "swiper.css": "http://dev.resource.qianli.com/css/swiper.4a1bb513.min.css",
+  "swiper.js": "http://dev.resource.qianli.com/js/swiper.9a45b568.min.js",
+  "lib/swiper.min.js": "http://dev.resource.qianli.com/lib/swiper.min.js",
+  "lib/jquery.min.js": "http://dev.resource.qianli.com/lib/jquery.min.js",
+  "lib/require.min.js": "http://dev.resource.qianli.com/lib/require.min.js",
+  "lib/log.min.js": "http://dev.resource.qianli.com/lib/log.min.js"
 }
