--- a/services/backend/tsconfig.json
+++ b/services/backend/tsconfig.json
@@ -15,7 +15,7 @@
     },
     "target": "es2017",
     "sourceMap": true,
-    "outDir": "../../dist",
+    "outDir": "./dist",
     "baseUrl": "./",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
