--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "start:dev": "pnpm -r start:dev"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "autoprefixer": "^10.4.16",
-    "cssnano": "^6.0.2",
-    "eslint": "^8.56.0",
+    "@types/node": "^20.11.24",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "autoprefixer": "^10.4.18",
+    "cssnano": "^6.0.5",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "29.7.0",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.35",
     "postcss-syntax": "^0.36.2",
-    "prettier": "^3.1.1",
-    "stylelint": "^16.1.0",
+    "prettier": "^3.2.5",
+    "stylelint": "^16.2.1",
     "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recess-order": "^4.4.0",
+    "stylelint-config-recess-order": "^5.0.0",
     "stylelint-prettier": "^5.0.0",
-    "supertest": "^6.3.3",
-    "tailwindcss": "^3.4.0",
+    "supertest": "^6.3.4",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
