--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -19,41 +19,42 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/cache-manager": "^2.1.1",
-    "@nestjs/common": "^10.3.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.3.0",
-    "@nestjs/mapped-types": "^2.0.4",
-    "@nestjs/platform-express": "^10.3.0",
-    "@nestjs/typeorm": "^10.0.1",
-    "cache-manager": "^5.3.2",
+    "@nestjs/cache-manager": "^2.2.1",
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/config": "^3.2.0",
+    "@nestjs/core": "^10.3.3",
+    "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/typeorm": "^10.0.2",
+    "cache-manager": "^5.4.0",
     "cache-manager-ioredis-yet": "^1.2.2",
-    "class-validator": "^0.14.0",
-    "express-session": "^1.17.3",
+    "class-validator": "^0.14.1",
+    "express-session": "^1.18.0",
     "ioredis": "^5.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.9.2",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "svg-captcha": "^1.4.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.1",
-    "@nestjs/schematics": "^10.0.3",
-    "@nestjs/testing": "^10.3.0",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.3",
     "@types/cache-manager": "^4.0.6",
     "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.10",
-    "@types/jest": "29.5.11",
+    "@types/express-session": "^1.18.0",
+    "@types/jest": "29.5.12",
     "@types/js-yaml": "^4.0.9",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/md5": "^2.3.5",
     "@types/multer": "^1.4.11",
     "@types/pug": "^2.0.10",
+    "cache-manager-ioredis-yet": "^1.2.2",
     "source-map-support": "^0.5.21",
     "tsconfig-paths": "4.2.0"
   },
