ci: 调整 stylelint 配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,8 @@
     "scss",
     "stylus"
   ],
-  "stylelint.customSyntax": "stylelint-plugin-stylus/custom-syntax",
   "stylelint.validate": [
+    "vue",
     "stylus",
     "less"
   ],
