--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "postcss-syntax": "^0.36.2",
     "prettier": "^3.2.5",
     "stylelint": "^16.2.1",
-    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-html": "^1.1.0",
     "stylelint-config-recess-order": "^5.0.0",
     "stylelint-prettier": "^5.0.0",
     "supertest": "^6.3.4",
