--- a/services/admin/.stylelintrc
+++ b/services/admin/.stylelintrc
@@ -1,12 +1,19 @@
 {
-  "extends": ["stylelint-config-prettier", "stylelint-less", "stylelint-config-recess-order"],
-  "plugins": ["stylelint-prettier"],
+  "extends": ["stylelint-config-standard-less", "stylelint-config-html/vue", "stylelint-config-recess-order"],
+  "plugins": ["stylelint-prettier", "stylelint-less"],
   "rules": {
+    "selector-class-pattern": ".[_A-Za-z]",
     "at-rule-no-unknown": [
       true,
       {
         "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.less", ".vue"],
+      "customSyntax": "postcss-html"
+    }
+  ]
 }
