--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -51,6 +51,7 @@
     "less": "^4.2.0",
     "npm-run-all2": "^6.1.2",
     "postcss-less": "^6.0.0",
+    "stylelint-config-standard-less": "^3.0.1",
     "stylelint-less": "^3.0.1",
     "typescript": "~5.3.3",
     "unplugin-auto-import": "^0.17.5",
