--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -36,6 +36,7 @@
     "css-loader": "^6.10.0",
     "mini-css-extract-plugin": "^2.8.1",
     "postcss-loader": "^8.1.1",
+    "postcss-styl": "^0.12.3",
     "postcss-url": "^10.1.3",
     "stylelint-plugin-stylus": "^1.0.0",
     "stylus": "^0.63.0",
