chore: 更新 pug 配置 更新 推荐插件

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,15 @@
     "Vue.volar",
     "Vue.vscode-typescript-vue-plugin",
     "dbaeumer.vscode-eslint",
+    "EditorConfig.EditorConfig",
+    "streetsidesoftware.code-spell-checker",
+    "aaron-bond.better-comments",
+    "sysoev.language-stylus",
+    "stylelint.vscode-stylelint",
+    "amandeepmittal.pug",
+    "bradlc.vscode-tailwindcss",
+    "akamud.vscode-theme-onelight",
+    "akamud.vscode-theme-onedark",
     "esbenp.prettier-vscode"
   ]
 }
