--- a/services/admin/package.json
+++ b/services/admin/package.json
@@ -42,9 +42,9 @@
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@volar/vue-language-plugin-pug": "^1.6.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/language-plugin-pug": "^2.0.5",
     "@vue/tsconfig": "^0.5.1",
     "eslint-plugin-vue": "^9.22.0",
     "eslint-plugin-vue-pug": "^0.6.2",
